# numerical-methods

./: README.md  pyproject.toml
finals-finals/: diff.py
finals/1. Optimization -20240516T221417Z-001/1. Optimization/: Optimization 4.py  optimization 2.py  optimization 3.py
finals/2. Curve Fitting -20240516T221417Z-001/2. Curve Fitting/: Interpolation 1.py  Interpolation 2.py  Interpolation 3.py  Interpolation 5.py  Least square Regression 1.py
finals/3. Numerical Differentiation -20240516T221418Z-001/3. Numerical Differentiation/: NUmerical Differentiation 1.py
finals/4.Numerical Integration -20240516T221420Z-001/4.Numerical Integration/: Numerical Integration 1.py  Numerical Integration 2(1).py
numerical_methods/: Taylor_Series.py  activity-1.py  plot.py  taylor_class.py
numerical_methods/3-cramer/: activity-3.py
numerical_methods/4-optimization/: golden_section.py  lin-prog.py  linear.py  non-linear.py
numerical_methods/5-curve-fitting/: lagrange-algorithm.py  least_square.py  lin-regression.py  regession-plot.py  regression-scipy.py  regression.py  regression2.py
numerical_methods/6-numerical-integration-differentiation/: graph.py  multi-graph.py  numerical-differentiation.py  numerical-integration.py
numerical_methods/activity1/: activity-1.py  taylor_class.py
numerical_methods/activity2/: activity-2.py  bisection_commented.py  newton-raphson.py
numerical_methods/activity4/: golden_section.py
numerical_methods/case-study/: SN_d_tot_V2.0.txt  SN_y_tot_V2.0.txt  intro.md  s.py
tests/: test_numerical_methods.py
(+59 files in other folders)
