[tool.poetry]
name = "numerical-methods"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
